# airtable-formula-helper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  cli.py  pyproject.toml
src/airtableformulahelpers/: __init__.py
tests/: test_attachment_fields.py  test_basic_field_operations.py  test_boolean_fields.py  test_conditional_logic.py  test_date_fields.py  test_integration.py  test_list_fields.py  test_logic_functions.py  test_main.py  test_main.py.bak  test_number_fields.py  test_text_fields.py
